--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "bcrypt": "^4.0.1",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
