--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.1",
     "@nestjs/typeorm": "^7.0.0",
     "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
